--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
 	},
 	"dependencies": {
 		"@astrojs/alpinejs": "^0.4.0",
+		"@astrojs/react": "^4.2.1",
 		"@astrojs/rss": "^4.0.5",
 		"@astrojs/sitemap": "^3.1.2",
 		"@astrojs/tailwind": "^5.1.0",
 		"@fontsource-variable/inter": "^5.0.17",
 		"@types/alpinejs": "^3.13.10",
+		"@types/react": "^19.0.11",
+		"@types/react-dom": "^19.0.4",
 		"alpinejs": "^3.13.7",
 		"astro": "^4.5.12",
 		"astro-i18next": "^1.0.0-beta.21",
@@ -30,6 +33,8 @@
 		"bad-words": "^3.0.4",
 		"dotenv": "^16.4.5",
 		"openai": "^4.31.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"rss-parser": "^3.13.0",
