--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "1.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "astro dev --host",
+		"dev": "astro dev",
 		"start": "astro dev",
 		"build": "astro build",
 		"build:localized": "pnpm run i18n:generate && pnpm run build",
