--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"alpinejs": "^3.13.7",
 		"astro": "^4.5.12",
 		"astro-i18next": "^1.0.0-beta.21",
-		"astro-icon": "^1.1.0",
+		"astro-icon": "^1.1.5",
 		"astro-seo": "^0.8.3",
 		"bad-words": "^3.0.4",
 		"dotenv": "^16.4.5",
@@ -38,6 +38,7 @@
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"rss-parser": "^3.13.0",
+		"solid-js": "^1.9.5",
 		"tailwindcss": "^3.4.3"
 	},
 	"devDependencies": {
