--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "astros",
+	"name": "f",
 	"type": "module",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"private": true,
 	"scripts": {
 		"dev": "astro dev",
@@ -16,44 +16,44 @@
 		"pwa:generate-assets": "pwa-assets-generator --preset minimal public/logo.svg"
 	},
 	"dependencies": {
-		"@astrojs/alpinejs": "^0.4.0",
+		"@astrojs/alpinejs": "^0.4.3",
 		"@astrojs/react": "^4.2.1",
-		"@astrojs/rss": "^4.0.5",
-		"@astrojs/sitemap": "^3.1.2",
-		"@astrojs/tailwind": "^5.1.0",
-		"@fontsource-variable/inter": "^5.0.17",
-		"@types/alpinejs": "^3.13.10",
-		"@types/react": "^19.0.11",
+		"@astrojs/rss": "^4.0.11",
+		"@astrojs/sitemap": "^3.3.0",
+		"@astrojs/tailwind": "^5.1.5",
+		"@fontsource-variable/inter": "^5.2.5",
+		"@types/alpinejs": "^3.13.11",
+		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
-		"alpinejs": "^3.13.7",
-		"astro": "^4.5.12",
-		"astro-i18next": "^1.0.0-beta.21",
+		"alpinejs": "^3.14.9",
+		"astro": "^4.16.18",
+		"astro-i18next": "1.0.0-beta.21",
 		"astro-icon": "^1.1.5",
-		"astro-seo": "^0.8.3",
+		"astro-seo": "^0.8.4",
 		"bad-words": "^3.0.4",
-		"dotenv": "^16.4.5",
-		"openai": "^4.31.0",
+		"dotenv": "^16.4.7",
+		"openai": "^4.88.0",
+		"papaparse": "^5.5.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"rss-parser": "^3.13.0",
-		"solid-js": "^1.9.5",
-		"tailwindcss": "^3.4.3"
+		"tailwindcss": "^3.4.17"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.6.3",
-		"@iconify-json/bx": "^1.1.10",
-		"@iconify-json/carbon": "^1.1.31",
-		"@iconify-json/fluent": "^1.1.51",
-		"@iconify-json/ion": "^1.1.17",
-		"@iconify-json/mdi": "^1.1.64",
-		"@iconify-json/tabler": "^1.1.109",
-		"@tailwindcss/typography": "^0.5.12",
-		"@vite-pwa/assets-generator": "^0.2.4",
+		"@iconify-json/bx": "^1.2.2",
+		"@iconify-json/carbon": "^1.2.8",
+		"@iconify-json/fluent": "^1.2.16",
+		"@iconify-json/ion": "^1.2.2",
+		"@iconify-json/mdi": "^1.2.3",
+		"@iconify-json/tabler": "^1.2.17",
+		"@tailwindcss/typography": "^0.5.16",
+		"@vite-pwa/assets-generator": "^0.2.6",
 		"@vite-pwa/astro": "^0.3.1",
-		"rehype": "^13.0.1",
-		"sharp": "^0.33.3",
-		"workbox-window": "^7.0.0"
+		"rehype": "^13.0.2",
+		"sharp": "^0.33.5",
+		"workbox-window": "^7.3.0"
 	}
 }
