--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/alpinejs": "^3.13.11",
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
+		"@visactor/vtable": "^1.17.3",
 		"alpinejs": "^3.14.9",
 		"astro": "^4.16.18",
 		"astro-i18next": "1.0.0-beta.21",
